--- a/.goreleaser.yaml
+++ b/.goreleaser.yaml
@@ -30,7 +30,7 @@ release:
   target_commitish: '{{ .Commit }}'
   draft: true
   github:
-    owner: kevinanielsen
+    owner: JayJay1989
     name: go-fast-cdn
 
 archives:
